samples/_failures_safe/1761725804_02018f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a2ffcf0.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8a2ffcf0.c:163:9: error: expected declaration or statement at end of input
  163 |         tokens[token_count].line = line;
      |         ^~~~~~
./samples/SAFE/__tmp_8a2ffcf0.c:163:9: error: expected declaration or statement at end of input
